--- a/css/style.css
+++ b/css/style.css
@@ -58,3 +58,45 @@ span{color: gold;
     text-align: center;
     color: #fff;
 }
+.content h1{
+    font-size: 70px;
+    margin-top: 80px;
+}
+.content p{
+    margin: 20px auto;
+    font-weight: 100;
+    line-height: 25px;
+}
+button{
+    width: 200px;
+    padding: 15px 0;
+    text-align: center;
+    margin: 20px 10px;
+    border-radius: 25px;
+    font-weight: bold;
+    border: 2px solid gold;
+    background: transparent;
+    color: #fff;
+    cursor: pointer;
+}
+button:hover{
+   color: gold;
+}
+footer{
+    width: 100%;
+position: absolute;
+top: 89%;
+text-align: center;
+color: #fff;
+justify-content: space-between;
+}
+
+.social a{
+    color: gold;
+    font-size: 13px;
+}
+.social a:hover{
+    transform: scale(1.1);
+    transition: .3s;
+    color: white;
+}
