--- a/css/style.css
+++ b/css/style.css
@@ -85,12 +85,14 @@ button:hover{
 footer{
     width: 100%;
 position: absolute;
-top: 89%;
+top: 84%;
 text-align: center;
 color: #fff;
 justify-content: space-between;
 }
-
+footer .p{
+    padding-top: 15px;
+}
 .social a{
     color: gold;
     font-size: 13px;
@@ -99,4 +101,107 @@ justify-content: space-between;
     transform: scale(1.1);
     transition: .3s;
     color: white;
+}
+section{
+    padding: 30px 15%;
+}
+.contact{
+    background: #101010; 
+    height: 100%; 
+    width: 100%; 
+    min-height: 100vh;
+    display: grid;
+    grid-template-columns: repeat(2, 2fr);
+    align-items: center;
+    grid-gap:6rem
+}
+.contact-img img{
+    max-width: 100%;
+    width: 400px;
+    height: auto;
+    border-radius: 10px;
+}
+.contact-form h1{
+    font-size: 80px;
+    color: #fff;
+    margin-bottom: 20px;
+}
+.contact-form p{
+    color: #c6c9d8bf;
+    letter-spacing: 1px;
+    line-height: 26px;
+    font-size: 1.1rem;
+    margin-bottom: 3.8rem;
+}
+.contact-form form{
+    position: relative;
+}
+.contact-form form input, form textarea{
+width: 100%;
+padding: 17px;
+border: none;
+outline: none;
+background: #191919;
+color: #fff;
+font-size: 1.1rem;
+margin-bottom: 0.7rem;
+border-radius: 10px;
+}
+.contact-form textarea{
+    resize: none;
+    height: 100px;
+}
+.contact-form form .btn{
+    display: inline-block;
+    background: gold;
+    font-size: 1.1rem;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    font-weight: 600;
+    border: 2px solid transparent;
+    border-radius: 10px;
+    width: 220px;
+    transition: ease .20s;
+    cursor: pointer;
+
+}
+.contact-form form .btn:hover{
+    border: 2px solid gold;
+    background: transparent;
+    transform: scale(1.1);
+}
+@media (max-width:1570px) {
+    section{
+        height: 100vh;
+        padding: 80px 3%;
+        transition: .2s;
+    }
+    .contact-form h1{
+        font-size: 60px;
+    }
+    .contact-form p{
+        margin-bottom: 3rem;
+    }
+}
+@media (max-width:1090px){
+    .contact{
+        grid: gap 2rem;
+        transition: .3s ;
+    }
+}
+@media (max-width:1000px){
+    .contact{
+        grid-template-columns: 1fr;
+        padding-bottom: 20px;
+    }
+    .contact-form{
+        order: 2;
+    }
+    .contact-img img{
+        max-width: 100%;
+        width: 100%;
+        height: auto;
+        text-align: center;
+        margin-bottom: 30px;
+    }
 }
